# ChangeLog for dev-python/kombu
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/kombu/ChangeLog,v 1.11 2012/11/29 07:28:36 patrick Exp $

*kombu-2.4.10 (29 Nov 2012)

  29 Nov 2012; Patrick Lauer <patrick@gentoo.org> +kombu-2.4.10.ebuild:
  Bump

*kombu-2.4.9 (26 Nov 2012)

  26 Nov 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.4.9.ebuild,
  -kombu-2.4.5.ebuild, -kombu-2.4.7.ebuild:
  bump to 2.4.9

*kombu-2.4.8 (13 Nov 2012)

  13 Nov 2012; Patrick Lauer <patrick@gentoo.org> +kombu-2.4.8.ebuild:
  Bump

*kombu-2.4.7 (28 Sep 2012)

  28 Sep 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.4.7.ebuild,
  -kombu-2.3.2.ebuild, -kombu-2.4.3.ebuild:
  Bump to 2.4.7.

*kombu-2.4.5 (31 Aug 2012)

  31 Aug 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.4.5.ebuild:
  Bump to 2.4.5.

*kombu-2.4.3 (30 Aug 2012)

  30 Aug 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.4.3.ebuild,
  -kombu-2.3.0.ebuild:
  Bump to 2.4.3.

*kombu-2.3.2 (14 Aug 2012)

  14 Aug 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.3.2.ebuild,
  -kombu-2.2.0.ebuild, -kombu-2.2.6.ebuild:
  Bump to 2.3.2, remove old versions.

*kombu-2.3.0 (29 Jul 2012)

  29 Jul 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.3.0.ebuild:
  Bump to 2.3.0

*kombu-2.2.6 (17 Jul 2012)

  17 Jul 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.2.6.ebuild,
  -kombu-2.1.8.ebuild, metadata.xml:
  kombu 2.2.6 version bump.

*kombu-2.2.0 (29 Jun 2012)

  29 Jun 2012; Corentin Chary <iksaif@gentoo.org> +kombu-2.2.0.ebuild:
  Bump to 2.2.0. Closes #422723. Patch from Ian Delaney.

*kombu-2.1.8 (30 May 2012)

  30 May 2012; Corentin Chary <iksaif@gentoo.org>
  +files/kombu-2.1.1-add-assertIsInstance-with-unittest.patch,
  +kombu-2.1.8.ebuild, +metadata.xml:
  New ebuild for kombu.