@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX kombu-2.1.1-add-assertIsInstance-with-unittest.patch 467 SHA256 a38902c382dbf9b062751f69bf1cabe0807144c597c1c3ccb770f48618e9852c SHA512 cc4764547a267b7573a0f6b58ee5cd6b7967f688d4dadf6a082cfe4a257f0b6f0ad645a50e1887727d14b0b61487b0b888c5f6f6782c2cac1663cc668d49a24a WHIRLPOOL 0a8a94eb5e2a951f932548f47777017d8e9543bbfc1dc97351e750ab7a620f79f13b67d783eeb16d28eb3d54b7c2fda6b65c753e6226e91ec738dabb8262f23b
 DIST kombu-2.4.10.tar.gz 291204 SHA256 211cb68b133578338aac0990d31d9255ed54b5f1861fb2cd54c1bb28bdbc8a6e SHA512 e2d10d2d3c13072b079e29f12094b9a88e55f58e1368da1ebc0eedface3c1e0bdd5d3d7ac00469027051b61c3285a30f7b6d47a0fe8345d8bf04cb2a7b1f8748 WHIRLPOOL 6e4324dbabc1a61c7f4596e6bd54d750fc6f39f28e364c13213f130149a070153bd36fd76e2fef3ceaea4ded4cd79b3cc1c3708a2da20be4c5f1d06a2fa3bc6c
 DIST kombu-2.4.8.tar.gz 290975 SHA256 c6613158dcb21d630300dbb53fb76dabdc28c21ba2b13386ce39fda136c5907e SHA512 cc340c14e7d081ebfb59c439db39b13aeceb62e803c8738072e4626ee8f23cf1ea73e012f25dd972b11a06520b86831261ace8ff878b0a1ee8e905e3f3f9f5a0 WHIRLPOOL c7a41aea5e99ed4a8f33fb620e8ff177b764484112b1c7ad980f7cb8bcc8bffe8c1a6df5ea7a904e7135e9c53e5ae3393b3591d0056bbf930c6b74e05fffa698
 DIST kombu-2.4.9.tar.gz 291187 SHA256 94ee2160adbc377fccfa9dc156056103ba566536b831e75c9569815b9f4a9598 SHA512 695aa7750542136227f00e39713de24397ad58279c510afd49070ae1f3d1fec470a64abe8bf67be75800c70ba03adeb40c6cf1f9e412434e4d039eb51acb3e6f WHIRLPOOL a66e5638fcd9404fbe95f282b68ada58e19b509f0240592b10ffcea369839dd4417bd7be3297a94174119c7758c93317f60c7f0c054fc80f376170dac1c8fae3
-EBUILD kombu-2.4.10.ebuild 1429 SHA256 287f014546abfb6bcdcc379b967c5c7cb78a6341c62d60e6e213b23769ccc45c SHA512 24eb7c7e19cee48bf892c2929f462bc8a73e973fb2646d52e11ac7c7a1aded9d4f851ef8e99e64c683c3897cdfad08c70883976082df5a0af733244a5781ee2c WHIRLPOOL 6b407a2bbede41683fe5a491abb3f7ae169e5f2f905bddc0737fde64c598e0033b194f994036e06e95a6146bb4ffd5c6434967f56644b5bb9310ab71924da09b
+EBUILD kombu-2.4.10.ebuild 1966 SHA256 fad3303eb76881e79511fe31787f925f415e26a365b34f200f207192d94eccca SHA512 e026e7b4da5dcec11d31bb1de95e0512abfbbf49c741f7542dea587d51e6231daa58e26d227394f4dde5cc99c88feeffdce477dfa74a352cbf37392970ff538f WHIRLPOOL 26a71860f1d6d04ab681f8b087befb8cf003fff15033deb67bfa456afc125067d0b59f774e0875dbd1f86894b2cf69ed53dc51bef3b5fddc519a1b0e22054d57
 EBUILD kombu-2.4.8.ebuild 1550 SHA256 7febe50e5f3bf05afc03218a4ccdce0b488bf99ac41b46b8f51ff3f7c379e48f SHA512 45946f459a395f1887ed16d6d6db64440d451a0a2658b64b58947164c295c75803ca92fbb2f7da3012fdac9de0b8fa0f8ea61e7e54fe0553ff518873ae215cf4 WHIRLPOOL 0f2978bb43f5cf045bdff362504e022f70810ec40f44ff3cfdf7119f23772645cdd78cde9f20fab59fd8d6ebf2ddbd4bc60f1306ca2ce09d7b8643ef637dcff3
 EBUILD kombu-2.4.9.ebuild 1427 SHA256 85c3134b7d24b3a3196ae2649b02648633dbc2ca99bd8c4a916b2aa028f98c99 SHA512 35beb98476c9770cadff72427f8a34c3301b8731cc4abb40386f2a87520793ac366df5921c7db57500dc2193e3c0b4129a44223dd99aa9ceb5bce20c70de08ee WHIRLPOOL 70b6aafdc4410b4bfbe6ddf39c51fdb9a71dd5e0664c0f1fdfa1c9ff0f87379a08f5f234a8338a34ab0a9882aa370e7f3bb3e7a6d12c45c7f7ffe6e77b633178
-MISC ChangeLog 1824 SHA256 f0838845b40d6cd8680b8b9519d14d8eb4a9d6fb45c5bd1176b33fc3368c27e2 SHA512 ccef48ace1891f6d273aec5384f8f30b4bfa64f89b38eeaa2e866798b78b284f7be227c4c36a1b8520a84da6fbd8756d503ce8062e72cd5b726701339915c0ec WHIRLPOOL 414e333a57ed7e73d01063262af5489a3cd681d447821da7330534a9bda0aea5bc905adbe2e11330101e199f0f97f6611aecdff3552d9001d4a0b8e12c158acf
+MISC ChangeLog 2034 SHA256 c6c57f0ff1175fe8c54fffc4958fa9929f30884b6d765d42911ffdf4c0f9387a SHA512 5c1d6ad509a067fefd475659a0daca7715b3e11191df598d20fe305bfc924046fcde188087de236b24249c6b78b413dfb054994485bc274d2fe1defb1d369497 WHIRLPOOL 7e2d09116f300ba3cd42a26b6ec29f610e17faafc09ec3d92949c6692b4bccc77b910ab75c036381826d6217aec2371cd523b147380471e1ab63aed2d8067a87
 MISC metadata.xml 374 SHA256 d9e8e1c0078fef43de27867f490457b1e43953d73e38c5bfcada7b798b754463 SHA512 001b8178c44cb7f838331829e77cbabfa0cecdabe8d84e5dcf240e3ed27eceb19e47685e99a9301848d315666ba7238f8990dbb1067f731e9dceeaa2a6608220 WHIRLPOOL 27a4d2e6d310f811a892367f109aed7a9f4ca0f052161956ec6d1eef3570f31d30fd4aabe2b16bae2ede04a081273cb8c1f07bb96f361f9afcea9b6875242b62
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDEG98ACgkQso7CE7gHKw2oOACeIhqoVC5PtKtc+6uXiaoxVct2
+Q9MAnRirQM7NHLTLwbElr9wwychaiYwQ
+=kWxO
+-----END PGP SIGNATURE-----
