@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/kombu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/kombu/ChangeLog,v 1.11 2012/11/29 07:28:36 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/kombu/ChangeLog,v 1.12 2012/12/08 13:04:31 idella4 Exp $
+
+  09 Dec 2012; Ian Delaney <idella4@gentoo.org> kombu-2.4.10.ebuild:
+  USE doc with python3 set to die due to inability of py3 to build docs, fixed
+  build of docs with py2, fixes bug #No. 445688 by flameeyes
 
 *kombu-2.4.10 (29 Nov 2012)
 
